syntax = "proto3";
package onepiece.protobuf;

import "google/protobuf/descriptor.proto";

extend google.protobuf.FieldOptions {
  bool stream_id = 50001;
}
